# FastAPI_Chat

./: .coverage  .env  .gitignore  Dockerfile  Makefile  README.md  dump.rdb  mypy.ini  pyproject.toml
.github/workflows/: main.yml
chat/: api.py  conf.py  db.py  main.py  models.py
tests/: conftest.py  test_app.py
