[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["BogdanBarylo <barylob@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.0"}
uvicorn = {extras = ["standard"], version = "^0.31.0"}
requests = "^2.32.3"
redis = "^5.1.0"
aioredis = "^2.0.1"
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
