[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["BogdanBarylo <barylob@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.0"}
uvicorn = {extras = ["standard"], version = "^0.31.0"}
redis = "^5.1.0"
aioredis = "^2.0.1"
httpx = "^0.27.2"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.6.1"
sqids = "^0.5.0"
websockets = "^14.1"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.24.0"
pytest = "^8.3.3"
ruff = "^0.7.1"
pytest-cov = "^6.0.0"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79